--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Web site created using create-react-app" />
     <link rel="apple-touch-icon" href="./build/logo192.png" />
     <link rel="manifest" href="./build/manifest.json" />
-    <title>浙江财经大学健康通行码</title>
+    <title>React App</title>
     <link href="./build/static/css/main.e0417051.chunk.css" rel="stylesheet">
 </head>
 
